updating login file style

--- a/Staticpages/login.html
+++ b/Staticpages/login.html
@@ -22,8 +22,8 @@
       <div class="hero-body" style ="background-color:rgba(114, 140, 187, 0.842); background-image:url(https://wallpaper.dog/large/999948.jpg); background-repeat: no-repeat; background-attachment: fixed;  background-size: cover; image-rendering: -webkit-optimize-contrast;" >
         <div class="container">
           <div class="columns is-centered" >
-            <div class="column is-half" style ="background-color:rgba(7, 5, 36, 0.973)">
-              <h1 style ="text-align:center;color:rgba(255, 255, 255, 0.973)"><b>C & M LTD - LOGIN</b></h1>
+            <div class="column is-half" style ="background-color:rgba(7, 5, 36, 0.973); border-radius:20px">
+              <h1 style ="text-align:center;color:rgba(255, 255, 255, 0.973)"><b>C&M LTD - LOGIN</b></h1>
               <form method="POST">
                 <div class="field" >
                   <label class="label" id="label">Username</label>
